modified the uploadtest

--- a/src/main/java/configurationpackage/configuration.properties
+++ b/src/main/java/configurationpackage/configuration.properties
@@ -1,6 +1,6 @@
 ##**************************************** Common Propertities ****************************************##
 type=local
-browser=edge
+browser=chrome
 url=https://the-internet.herokuapp.com/login
 username=tomsmith
 password=SuperSecretPassword!
