--- a/src/main/java/configurationpackage/configuration.properties
+++ b/src/main/java/configurationpackage/configuration.properties
@@ -1,5 +1,5 @@
 ##**************************************** Common Propertities ****************************************##
-type=local
+type=remote
 browser=chrome
 url=https://the-internet.herokuapp.com/login
 username=tomsmith
