build is successful

--- a/src/main/java/configurationpackage/configuration.properties
+++ b/src/main/java/configurationpackage/configuration.properties
@@ -19,4 +19,4 @@ notificationurl=https://the-internet.herokuapp.com/notification_message_rendered
 downloadurl=https://the-internet.herokuapp.com/download
 uploadurl=https://the-internet.herokuapp.com/upload
 floatingmenuurl=https://the-internet.herokuapp.com/floating_menu#home
-indexurl=https://indexes.morningstar.com/our-indexes
+indexurl=https://indexes.morningstar.com/indexes/screener
