Added utility method to read json file

--- a/src/main/java/configurationpackage/application.properties
+++ b/src/main/java/configurationpackage/application.properties
@@ -1,7 +1,1 @@
-url=jdbc:sqlserver://localhost:1433
-databaseName=AdventureWorks2012
-integratedSecurity=false
-encrypt=true
-trustServerCertificate=true
-username=sa
-password=sa1234
+msSqlUrl=jdbc:sqlserver://localhost:1433;
